// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Index Entrypoint > exports > AbstractEndpoint should have certain value 1`] = `[Function]`;

exports[`Index Entrypoint > exports > BuiltinLogger should have certain value 1`] = `[Function]`;

exports[`Index Entrypoint > exports > DependsOnMethod should have certain value 1`] = `[Function]`;

exports[`Index Entrypoint > exports > Documentation should have certain value 1`] = `[Function]`;

exports[`Index Entrypoint > exports > DocumentationError should have certain value 1`] = `[Function]`;

exports[`Index Entrypoint > exports > EndpointsFactory should have certain value 1`] = `[Function]`;

exports[`Index Entrypoint > exports > InputValidationError should have certain value 1`] = `[Function]`;

exports[`Index Entrypoint > exports > Integration should have certain value 1`] = `[Function]`;

exports[`Index Entrypoint > exports > Middleware should have certain value 1`] = `[Function]`;

exports[`Index Entrypoint > exports > MissingPeerError should have certain value 1`] = `[Function]`;

exports[`Index Entrypoint > exports > OutputValidationError should have certain value 1`] = `[Function]`;

exports[`Index Entrypoint > exports > RoutingError should have certain value 1`] = `[Function]`;

exports[`Index Entrypoint > exports > ServeStatic should have certain value 1`] = `[Function]`;

exports[`Index Entrypoint > exports > arrayEndpointsFactory should have certain value 1`] = `
EndpointsFactory {
  "middlewares": [],
  "resultHandler": {
    "getNegativeResponse": [Function],
    "getPositiveResponse": [Function],
    "handler": [Function],
  },
  "use": [Function],
}
`;

exports[`Index Entrypoint > exports > arrayResultHandler should have certain value 1`] = `
{
  "getNegativeResponse": [Function],
  "getPositiveResponse": [Function],
  "handler": [Function],
}
`;

exports[`Index Entrypoint > exports > attachRouting should have certain value 1`] = `[Function]`;

exports[`Index Entrypoint > exports > createConfig should have certain value 1`] = `[Function]`;

exports[`Index Entrypoint > exports > createResultHandler should have certain value 1`] = `[Function]`;

exports[`Index Entrypoint > exports > createServer should have certain value 1`] = `[Function]`;

exports[`Index Entrypoint > exports > defaultEndpointsFactory should have certain value 1`] = `
EndpointsFactory {
  "middlewares": [],
  "resultHandler": {
    "getNegativeResponse": [Function],
    "getPositiveResponse": [Function],
    "handler": [Function],
  },
  "use": [Function],
}
`;

exports[`Index Entrypoint > exports > defaultResultHandler should have certain value 1`] = `
{
  "getNegativeResponse": [Function],
  "getPositiveResponse": [Function],
  "handler": [Function],
}
`;

exports[`Index Entrypoint > exports > ez should have certain value 1`] = `
{
  "dateIn": [Function],
  "dateOut": [Function],
  "file": [Function],
  "raw": [Function],
  "upload": [Function],
}
`;

exports[`Index Entrypoint > exports > getExamples should have certain value 1`] = `[Function]`;

exports[`Index Entrypoint > exports > getMessageFromError should have certain value 1`] = `[Function]`;

exports[`Index Entrypoint > exports > getStatusCodeFromError should have certain value 1`] = `[Function]`;

exports[`Index Entrypoint > exports > should have certain entities exposed 1`] = `
[
  "createConfig",
  "AbstractEndpoint",
  "EndpointsFactory",
  "defaultEndpointsFactory",
  "arrayEndpointsFactory",
  "getExamples",
  "getMessageFromError",
  "getStatusCodeFromError",
  "BuiltinLogger",
  "Middleware",
  "createResultHandler",
  "defaultResultHandler",
  "arrayResultHandler",
  "DependsOnMethod",
  "ServeStatic",
  "createServer",
  "attachRouting",
  "Documentation",
  "DocumentationError",
  "RoutingError",
  "OutputValidationError",
  "InputValidationError",
  "MissingPeerError",
  "testEndpoint",
  "Integration",
  "ez",
]
`;

exports[`Index Entrypoint > exports > testEndpoint should have certain value 1`] = `[Function]`;
